<resources>
    <string name="app_name">StoryApp</string>
    <string name="none">-</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">"Don’t have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_desc">main logo</string>
    <string name="detail_title">Detail of Story</string>
    <string name="add_story">add story</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="add_using_camera">add using camera</string>
    <string name="add_from_gallery">add from gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="photo_to_upload">photo to upload</string>
    <string name="share_is_fun">Share is fun!</string>
    <string name="post_online">Post online!</string>
    <string name="gain_happiness">Gain Happiness!</string>
    <string name="share_is_fun_image">share is fun image</string>
    <string name="post_online_image">post online image</string>
    <string name="gain_happiness_image">gain happiness image</string>
    <string name="exp_share">Share your story with everyone around the world, let the world see and appreciate the story and moment you share. Keep it going!</string>
    <string name="exp_post">By posting your story online, you can reach more prople, save your photos securely, and many more! what are you waiting for? Let\'s go!</string>
    <string name="exp_happy">When you share your story to someone, you will gain happiness unlimitedly! Make yourself happy everyday to be a longlife individual!</string>
    <string name="name_icon">name icon</string>
    <string name="story_image">story image</string>
    <string name="close">Close</string>
    <string name="email_error">Not a valid email format</string>
    <string name="pass_error">At least 8 character</string>
    <string name="deskerror">Add Description</string>
    <string name="permis_granted">Permission request granted</string>
    <string name="permis_denied">Permission request denied</string>
    <string name="img_notfound">Image not found</string>
    <string name="log_out">Log out</string>
    <string name="main_title">Hello, %1$s!</string>
    <string name="upload_title">Upload Your Story</string>
    <string name="language">Language</string>
</resources>