<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UploadActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/upload_title"
            app:titleCentered="true"
            android:elevation="@dimen/cardview_default_elevation"
            android:background="@color/mainCol"
            app:titleTextColor="@color/white"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="15dp"
                app:strokeWidth="4dp"
                app:strokeColor="@color/secCol">
                <ImageView
                    android:id="@+id/iv_foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/baseline_image_not_supported_24"
                    android:padding="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/photo_to_upload"/>
            </com.google.android.material.card.MaterialCardView>

            <ImageButton
                android:id="@+id/btn_cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/card_foto"
                app:layout_constraintStart_toStartOf="@id/card_foto"
                android:layout_marginHorizontal="10dp"
                android:textSize="18sp"
                android:padding="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/img_btn_bg"
                android:src="@drawable/baseline_camera_24"
                android:contentDescription="@string/add_using_camera"/>

            <ImageButton
                android:id="@+id/btn_gal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/btn_cam"
                app:layout_constraintStart_toEndOf="@id/btn_cam"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:padding="15dp"
                android:src="@drawable/baseline_image_24"
                android:backgroundTint="@color/mainCol"
                app:tint="@color/white"
                android:background="@drawable/img_btn_bg_2"
                android:contentDescription="@string/add_from_gallery"/>

            <com.haki.storyapp.customView.MyDeskEditText
                android:id="@+id/et_desk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/card_foto"
                app:layout_constraintEnd_toEndOf="@id/card_foto"
                app:layout_constraintTop_toBottomOf="@id/card_foto"
                android:background="@drawable/et_corner"
                android:hint="@string/description"
                android:padding="15dp"
                android:layout_marginTop="25dp"
                android:inputType="textMultiLine"/>

            <com.haki.storyapp.customView.MyButton
                android:id="@+id/btn_upload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textSize="18sp"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/et_desk"
                app:layout_constraintStart_toStartOf="@id/et_desk"
                app:layout_constraintEnd_toEndOf="@id/et_desk"
                app:cornerRadius="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/mainCol"
                android:enabled="false"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/btn_upload"
                app:layout_constraintBottom_toBottomOf="@id/btn_upload"
                app:layout_constraintStart_toStartOf="@id/btn_upload"
                app:layout_constraintEnd_toEndOf="@id/btn_upload"
                android:paddingVertical="10dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/secCol"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>