<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/detail_title"
            app:titleCentered="true"
            android:elevation="@dimen/cardview_default_elevation"
            android:background="@color/mainCol"
            app:titleTextColor="@color/white"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="15dp"
                app:strokeWidth="4dp"
                app:strokeColor="@color/secCol">
                <ImageView
                    android:id="@+id/iv_foto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/splashnotext"
                    android:contentDescription="@string/story_image"/>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/ll_pertama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_foto"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_ttl_bg"
                android:paddingHorizontal="15dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_person_24"
                    android:layout_gravity="center"
                    android:contentDescription="@string/name_icon"/>
                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/none"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_desk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/none"
                app:layout_constraintTop_toBottomOf="@id/ll_pertama"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:background="@drawable/et_isi_bg"
                android:paddingVertical="10dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="-4dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/secCol"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>